--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.5",
     "@types/helmet": "^0.0.43",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.2",
+    "@types/twilio": "^0.0.10",
     "babel-runtime": "^6.26.0",
     "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
@@ -41,9 +43,11 @@
     "graphql-tools": "^4.0.5",
     "graphql-yoga": "^1.18.1",
     "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
+    "twilio": "^3.33.1",
     "typeorm": "^0.2.17"
   }
 }
