--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "@types/mailgun-js": "^0.22.2",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
@@ -44,6 +45,7 @@
     "graphql-yoga": "^1.18.1",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
